--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <div id="away-name" class="fw-bold"></div>
       </div>
     </div>
+    <div class="container mt-4">
+      <div class="d-flex justify-content-end mb-3">
+        <a href="http://localhost:4200" target="_blank" class="btn btn-primary">Registrar</a>
+      </div>
+    </div>
     <div class="table-responsive">
       <table class="table table-striped table-hover align-middle" id="resultados-table">
         <thead class="table-dark">
