enlace con registrar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="container mt-4">
       <div class="d-flex justify-content-end mb-3">
-        <a href="http://localhost:4200" target="_blank" class="btn btn-primary">Registrar</a>
+        <a href="https://marioestebanortega.github.io/pollafutbolerafe" target="_blank" class="btn btn-primary">Registrar</a>
       </div>
     </div>
     <div class="table-responsive">
